Added a function that prevents clicking on the link several times in a row.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="favicon/favicon-16x16.png"
     />
 
-    <title>Jeux de cartes</title>
+    <title>Yu-Gi-Oh Memory</title>
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="index.js" defer></script>
     <script type="module" src="data.js" defer></script>
